# fastapi-sentinel

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml  requirements.dev.txt  requirements.txt
migrations/: env.py
migrations/versions/2026/06/: 10_2226_32_230eec9fdf4f_initial.py  12_1501_09_eb17b991028f_initial.py
scripts/: generate_er  generate_er.py
src/: config.py  main.py
src/api/: __init__.py  exception_handlers.py  responses.py
src/api/dependencies/: auth.py
src/api/v1/: __init__.py  auth.py  permissions.py  roles.py  users.py
src/api/v1/rbac/: __init__.py  permissions.py  roles.py
src/core/: uow.py
src/dto/: __init__.py  auth.py  token_blacklist.py  user.py
src/dto/rbac/: __init__.py  permission.py  role.py
src/enums/: __init__.py  permission.py  role.py
src/exceptions/: auth.py  base.py  rbac.py  user.py
src/ioc/: __init__.py  db.py  services.py  settings.py  uow.py
src/models/: __init__.py  base.py  permission.py  role.py  token_blacklist.py  user.py
src/models/association/: __init__.py  role_permissions.py  user_roles.py
src/models/rbac/: __init__.py  permission.py  role.py  roles_permissions.py
src/repo/: __init__.py  base.py  permission.py  role.py  token_blacklist.py  user.py
src/repo/rbac/: __init__.py  permission.py  role.py
src/schemas/: auth.py  permission.py  role.py  user.py
src/schemas/common/: __init__.py  partial.py
src/schemas/rbac/: __init__.py  permission.py  role.py
src/services/: permission.py  role.py  user.py
src/services/auth/: blacklist.py  service.py  tokens.py
src/services/auth/crypto/: jwt.py  password.py
src/services/rbac/: permission.py  role.py
src/utils/: mappings.py
