[project]
name = "fastapi-sentinel"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi[standard]>=0.136.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.50",
]

[dependency-groups]
docs = [
    "eralchemy[graphviz]>=1.7.0",
]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
]
migration = [
    "alembic>=1.18.4",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.31.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
extra_checks = true
strict = true
strict_equality_for_none = true
warn_unreachable = true

[tool.ruff]
src = ["."]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "DJ",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FAST",
    "FBT",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T10",
    "T20",
    "TID",
    "TRY",
    "UP",
    "W",
]
ignore = ["E501", "B008", "C901", "W191", "RUF001", "RUF002", "RUF003", "UP040"]


[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E402", "INP001"]
"**/migrations/versions/*.py" = ["RUF012", "W291", "INP001"]


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/migrations"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
# project root on sys.path so env.py can import the `src` package (src.models, ...).
prepend_sys_path = [
    "%(here)s",
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
recursive_version_locations = true

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# Post-write hooks: run ruff on each newly generated revision script (lint+autofix, then format).
[[tool.alembic.post_write_hooks]]
name = "ruff-check"
type = "module"
module = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff-format"
type = "module"
module = "ruff"
options = "format REVISION_SCRIPT_FILENAME"
